@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_proxy: Print the correct error message for erroneous configured
+     ProxyPass directives. PR 40439. [serai lans-tv.com]
+
   *) Allow htcacheclean, httxt2dbm, and fcgistarter to link apr/apr-util
      statically like the older support programs.
      [Eric Covener <covener gmail.com>]
